# DeutschePresentation

./: .nojekyll  CNAME  bloch.py  custom.scss  deutsch copy.qmd  index.html  main.html  main.qmd  pyproject.toml
assets/embedded/: bloch_sphere_0.html  bloch_sphere_1.html  bloch_sphere_H0.html  bloch_sphere_H1.html
